[metadata]
name = pipewatch
version = 0.1.0
description = A lightweight CLI tool to monitor and alert on data pipeline failures
long_description = file: README.md
long_description_content_type = text/markdown
author = pipewatch contributors
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pyyaml>=6.0

[options.entry_points]
console_scripts =
    pipewatch = pipewatch.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = pipewatch/tests
addopts = --tb=short
